# Joon-Klaps.github.io

./: .gitignore  LICENSE  README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml
.github/scripts/: add_pub.py  fetch_pub.py  requirements.txt
.github/workflows/: deploy.yml  update-publications.yml
src/: config.ts  publications.json
src/components/: Author.astro  BaseHead.astro  Footer.astro  Header.astro  HomepageCard.astro  HorizontalCard.astro  SideBar.astro
src/components/SideBar/: NavItem.astro
src/content/: config.ts
src/content/education/: campus_de_nayer.mdx  university_of_leuven.mdx
src/content/grants/: croucher-summer-course.mdx  fwo-phd-fellowship.mdx  roam-technology-award.mdx  sample-grant.mdx
src/content/projects/: ggphylogeo.mdx  lasvphylo.mdx  nf-core.mdx  rapidtrees.mdx  umi-checker.mdx  viralmetagenome.mdx
src/content/publications/2019/: klaps-ku-leuven.md
src/content/publications/2020/: klaps-fungal-biology-and-biotechnology.md  klaps-plos-one.md
src/content/publications/2021/: klaps-ku-leuven.md
src/content/publications/2024/: li-bioinformatics.md
src/content/publications/2025/: heeren-biorxiv.md  klaps-biorxiv.md  (+1 more)
src/content/workplaces/: cev.mdx
src/layouts/: BaseLayout.astro  ContentLayout.astro
src/pages/: contact.astro  index.astro
src/pages/grants/: [grants].astro  index.astro
src/pages/projects/: index.astro
src/pages/publications/: [...publication].astro  index.astro
src/pages/work/: index.astro
src/styles/: global.css
src/utils/: dateFormatting.ts  highlightAuthorName.ts
(+3 files in other folders)
